--- a/message.css
+++ b/message.css
@@ -71,3 +71,15 @@
     display: inline-block;
     
 }
+
+/*test*/
+div.test {
+    height: 10em;
+    position: relative }
+div.test textarea {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) }
